# AddConstLLVMPass

./: CMakeLists.txt  README.md
examples/: foo.ll  foo2.ll  foo3.ll
include/: AddConst.h
lib/: AddConstAnalysis.cpp  AddConstPass.cpp  AddConstPlugin.cpp  CMakeLists.txt
